--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,23 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: darkkhaki;
+  padding-top: 30px;
+}
+
+.score {
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .board-container {
-  height: 100vh;
+  height: 415px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,4 +36,9 @@ body {
   background-color: lightgreen;
   width: 100px;
   height: 100px;
+  cursor: pointer;
+}
+
+.charImg {
+  width: 100%;
 }
